created score screen

--- a/src/quiz.html
+++ b/src/quiz.html
@@ -26,10 +26,10 @@
             <button id="a-3" class="btn-primary">Answer</button><br>
             <button id="a-4" class="btn-primary">Answer</button><br>
 
-
+            <span id="feedback"></span>
         </div>
 
     <footer>
     </footer>
 </body>
-<script type="text/Javascript" src="../Assets/js/main.js"></script>
+<script type="text/Javascript" src="../Assets/js/quiz.js"></script>
