--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <div class="wrapper">
             <h1>Coding Quiz Challenge</h1>
             <p>The answers to the following are scored based on time left; every wrong answer is 15 seconds taken off your time.</p>
-            <button class="btn-primary" id="start">Start Quiz</button>
+            <a href="quiz.html"><button class="btn-primary" id="start">Start Quiz</button></a>
 
 
         </div>
