scoreboard.html now properly shows scores with highest number on top

--- a/src/scoreboard.html
+++ b/src/scoreboard.html
@@ -20,7 +20,8 @@
         <div class="float-right"><b>timer:</b> <span id="timer">0</span></div>
     </header>
         <div class="wrapper">
-            
+            <h1>High Scores:</h1>
+            <div id="scoreboard"></div>
 
 
         </div>
@@ -28,3 +29,5 @@
     <footer>
     </footer>
 </body>
+
+<script type="text/javascript" src="../Assets/js/scoreboard.js"></script>
