Makeing sure github is up to date

--- a/src/score.html
+++ b/src/score.html
@@ -20,6 +20,8 @@
 </head>
 <body>
      <header>
+          <div class="float-left"><a href="scoreboard.html">View High Scores</a></div>
+          <div class="float-right"><b>timer:</b> <span id="timer">0</span></div>
     </header>
 
     <div class="wrapper">
@@ -28,6 +30,7 @@
           <form id="playerScore">
                <label>Enter Initials:</label>
                <input type="text" id="initials">
+               <input type="submit">
           </form>
      </div>
 
