--- a/src/quiz.html
+++ b/src/quiz.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <div class="float-left"><a href="highScore.html">View High Scores</a></div>
+        <div class="float-left"><a href="scoreboard.html">View High Scores</a></div>
         <div class="float-right"><b>timer:</b> <span id="timer">0</span></div>
     </header>
         <div class="wrapper">
