--- a/src/scoreboard.html
+++ b/src/scoreboard.html
@@ -16,14 +16,12 @@
 </head>
 <body>
     <header>
-        <div class="float-left"><a href="highScore.html">View High Scores</a></div>
+        <div class="float-left"><a href="./scoreboard.html">View High Scores</a></div>
         <div class="float-right"><b>timer:</b> <span id="timer">0</span></div>
     </header>
         <div class="wrapper">
             <h1>High Scores:</h1>
-            <div id="scoreboard"></div>
-
-
+            <ol id="scoreboard"></ol>
         </div>
 
     <footer>
